--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -18,7 +18,7 @@
         }
 
         .container {
-            max-width: 600px;
+            max-width: 500px;
             margin: 0 auto;
             background: white;
             padding: 40px;
@@ -30,11 +30,21 @@
             font-size: 24px;
             color: #333;
             margin-bottom: 10px;
+            text-align: center;
         }
 
         .subtitle {
             color: #666;
             margin-bottom: 30px;
+            text-align: center;
+        }
+
+        .section {
+            display: none;
+        }
+
+        .section.active {
+            display: block;
         }
 
         .form-group {
@@ -62,20 +72,16 @@
             border-color: #007bff;
         }
 
-        .help-text {
-            font-size: 13px;
-            color: #666;
-            margin-top: 5px;
-        }
-
         .btn {
-            padding: 10px 20px;
+            width: 100%;
+            padding: 12px 20px;
             border: none;
             border-radius: 4px;
             font-size: 14px;
             font-weight: 500;
             cursor: pointer;
             transition: background-color 0.2s;
+            margin-bottom: 10px;
         }
 
         .btn-primary {
@@ -85,6 +91,74 @@
 
         .btn-primary:hover {
             background-color: #0056b3;
+        }
+
+        .btn-google {
+            background-color: white;
+            color: #333;
+            border: 1px solid #ddd;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+        }
+
+        .btn-google:hover {
+            background-color: #f8f9fa;
+        }
+
+        .btn-secondary {
+            background-color: #6c757d;
+            color: white;
+        }
+
+        .btn-secondary:hover {
+            background-color: #5a6268;
+        }
+
+        .btn-danger {
+            background-color: #dc3545;
+            color: white;
+        }
+
+        .btn-danger:hover {
+            background-color: #c82333;
+        }
+
+        .divider {
+            text-align: center;
+            margin: 20px 0;
+            position: relative;
+        }
+
+        .divider::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 0;
+            right: 0;
+            height: 1px;
+            background: #ddd;
+        }
+
+        .divider span {
+            background: white;
+            padding: 0 15px;
+            position: relative;
+            color: #666;
+            font-size: 13px;
+        }
+
+        .toggle-link {
+            text-align: center;
+            margin-top: 15px;
+            color: #007bff;
+            cursor: pointer;
+            font-size: 14px;
+        }
+
+        .toggle-link:hover {
+            text-decoration: underline;
         }
 
         .status-message {
@@ -107,61 +181,133 @@
             border: 1px solid #f5c6cb;
         }
 
-        .info-box {
-            background-color: #e7f3ff;
-            border-left: 4px solid #007bff;
+        .user-info {
+            background-color: #f8f9fa;
             padding: 15px;
-            margin-bottom: 30px;
             border-radius: 4px;
+            margin-bottom: 20px;
         }
 
-        .info-box p {
-            margin-bottom: 10px;
-            line-height: 1.5;
+        .user-info p {
+            margin-bottom: 8px;
+            color: #333;
         }
 
-        .info-box p:last-child {
+        .user-info p:last-child {
             margin-bottom: 0;
         }
 
-        .info-box a {
+        .user-info strong {
             color: #007bff;
-            text-decoration: none;
         }
 
-        .info-box a:hover {
-            text-decoration: underline;
+        .loader {
+            display: inline-block;
+            width: 16px;
+            height: 16px;
+            border: 2px solid #ffffff;
+            border-top-color: transparent;
+            border-radius: 50%;
+            animation: spin 0.8s linear infinite;
+            margin-left: 10px;
+        }
+
+        @keyframes spin {
+            to {
+                transform: rotate(360deg);
+            }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Sharh Notes Clipper Settings</h1>
-        <p class="subtitle">Configure your API connection to start clipping notes</p>
+        <h1>Sharh Notes Clipper</h1>
+        <p class="subtitle">Sign in to start clipping notes</p>
 
-        <div class="info-box">
-            <p><strong>How to get your authentication token:</strong></p>
-            <p>1. Log in to your Sharh account at <a href="https://sharhapp.com" target="_blank">sharhapp.com</a></p>
-            <p>2. Open your browser's developer console (F12)</p>
-            <p>3. Go to the Console tab and type: <code>localStorage.getItem('token')</code></p>
-            <p>4. Copy the token (without quotes) and paste it below</p>
+        <!-- Login Section -->
+        <div id="login-section" class="section active">
+            <form id="login-form">
+                <div class="form-group">
+                    <label for="login-identifier">Email or Username</label>
+                    <input type="text" id="login-identifier" placeholder="Enter your email or username" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="login-password">Password</label>
+                    <input type="password" id="login-password" placeholder="Enter your password" required>
+                </div>
+
+                <button type="submit" class="btn btn-primary">
+                    Sign In
+                    <span id="login-loader" class="loader" style="display: none;"></span>
+                </button>
+            </form>
+
+            <div class="divider"><span>OR</span></div>
+
+            <button id="google-login-btn" class="btn btn-google">
+                <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+                    <path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"/>
+                    <path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"/>
+                    <path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"/>
+                    <path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"/>
+                    <path fill="none" d="M0 0h48v48H0z"/>
+                </svg>
+                Continue with Google
+            </button>
+
+            <div class="toggle-link" id="show-register">Don't have an account? Sign up</div>
         </div>
 
-        <form id="settings-form">
-            <div class="form-group">
-                <label for="api-url">API URL</label>
-                <input type="text" id="api-url" placeholder="https://sharhapp.com/api" required>
-                <div class="help-text">The base URL of your Sharh API (leave as default for production)</div>
+        <!-- Register Section -->
+        <div id="register-section" class="section">
+            <form id="register-form">
+                <div class="form-group">
+                    <label for="register-username">Username</label>
+                    <input type="text" id="register-username" placeholder="Choose a username" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="register-email">Email</label>
+                    <input type="email" id="register-email" placeholder="Enter your email" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="register-password">Password</label>
+                    <input type="password" id="register-password" placeholder="Choose a password" required>
+                </div>
+
+                <button type="submit" class="btn btn-primary">
+                    Sign Up
+                    <span id="register-loader" class="loader" style="display: none;"></span>
+                </button>
+            </form>
+
+            <div class="divider"><span>OR</span></div>
+
+            <button id="google-register-btn" class="btn btn-google">
+                <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+                    <path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"/>
+                    <path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"/>
+                    <path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"/>
+                    <path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"/>
+                    <path fill="none" d="M0 0h48v48H0z"/>
+                </svg>
+                Sign up with Google
+            </button>
+
+            <div class="toggle-link" id="show-login">Already have an account? Sign in</div>
+        </div>
+
+        <!-- Logged In Section -->
+        <div id="logged-in-section" class="section">
+            <div class="user-info">
+                <p><strong>Email:</strong> <span id="user-email"></span></p>
+                <p><strong>Username:</strong> <span id="user-username"></span></p>
             </div>
 
-            <div class="form-group">
-                <label for="auth-token">Authentication Token</label>
-                <input type="password" id="auth-token" placeholder="Your JWT token" required>
-                <div class="help-text">Your JWT authentication token from Sharh</div>
-            </div>
-
-            <button type="submit" class="btn btn-primary">Save Settings</button>
-        </form>
+            <button id="logout-btn" class="btn btn-danger">Sign Out</button>
+        </div>
 
         <div id="status-message" class="status-message"></div>
     </div>
