--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -42,6 +42,13 @@
                 <input type="text" id="section-input" placeholder="Leave blank for 'Clips' section">
             </div>
 
+            <div class="form-group">
+                <label class="checkbox-label">
+                    <input type="checkbox" id="is-arabic-checkbox">
+                    Arabic Text (right-aligned)
+                </label>
+            </div>
+
             <div class="actions">
                 <button id="clip-button" class="btn btn-primary" disabled>
                     <span id="clip-text">Clip Note</span>
