--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -79,6 +79,12 @@
                         <textarea id="card-back" rows="3" placeholder="Enter the answer..."></textarea>
                     </div>
 
+                    <div class="actions" style="margin-bottom: 15px;">
+                        <button id="switch-button" class="btn btn-secondary">
+                            Switch Front ⇄ Back
+                        </button>
+                    </div>
+
                     <div class="form-group">
                         <label for="collection-select">Collection:</label>
                         <select id="collection-select">
@@ -100,12 +106,6 @@
                         <button id="create-card-button" class="btn btn-primary" disabled>
                             <span id="create-card-text">Create Card</span>
                             <span id="create-card-loader" class="loader" style="display: none;"></span>
-                        </button>
-                    </div>
-
-                    <div class="actions" style="margin-top: 10px;">
-                        <button id="use-selection-button" class="btn btn-secondary">
-                            Use Selected Text as Front
                         </button>
                     </div>
 
